# concordia-ai

./: .gitignore  elm.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
ai/: forms.py  llm.py  models.py  urls.py  views.py
ai/migrations/: 0001_initial.py  0002_alter_prompt_created_at_alter_response_created_at.py  0003_alter_prompt_created_at_alter_response_created_at.py
ai/templates/: base.html
ai/templates/ai/: application.html  coursebot_chat.html  coursebot_list.html  saml_login.html
conf/: settings.py  urls.py
static/src/: app.js
static/src/elm/: Chat.elm
