[project]
name = "concordia-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "environs[django]>=14.3.0",
    "openai>=1.99.9",
    "python3-saml>=1.16.0",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "django-vite>=3.1.0",
    "pyopenssl>=25.1.0",
    "werkzeug>=3.1.3",
]
